Move to Java 16. Clean up on readme. Cleanup on tests and pacts. Patching is turned off. Return to patching later